added top banner

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Bootstrap 3, from LayoutIt!</title>
+    <title>RipFire Media</title>
 
-    <meta name="description" content="Source code generated using layoutit.com">
-    <meta name="author" content="LayoutIt!">
+    <meta name="Direct to Garment printing experts. No minimums. Ever." content="">
+    <meta name="notben11" content="">
 
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -17,11 +17,11 @@
   <body>
 
     <div class="container-fluid">
-	<div class="row">
+	<div class="row top-banner">
 		<div class="col-md-12">
 			<dl>
 				<dt>
-					Description lists
+					This is for the top banner
 				</dt>
 				<dd>
 					A description list is perfect for defining terms.
