--- a/index.html
+++ b/index.html
@@ -17,37 +17,9 @@
   <body>
 
     <div class="container-fluid">
-	<div class="row top-banner">
+	<div class="row id="top-banner">
 		<div class="col-md-12">
-			<dl>
-				<dt>
-					This is for the top banner
-				</dt>
-				<dd>
-					A description list is perfect for defining terms.
-				</dd>
-				<dt>
-					Euismod
-				</dt>
-				<dd>
-					Vestibulum id ligula porta felis euismod semper eget lacinia odio sem nec elit.
-				</dd>
-				<dd>
-					Donec id elit non mi porta gravida at eget metus.
-				</dd>
-				<dt>
-					Malesuada porta
-				</dt>
-				<dd>
-					Etiam porta sem malesuada magna mollis euismod.
-				</dd>
-				<dt>
-					Felis euismod semper eget lacinia
-				</dt>
-				<dd>
-					Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
-				</dd>
-			</dl>
+		<h1>Banner</h1>
 		</div>
 	</div>
 	<div class="row">
