--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   <body>
 
     <div class="container-fluid">
-	<div class="row id="top-banner">
+	<div class="row class top-banner">
 		<div class="col-md-12">
-		<h1>Banner</h1>
+		
 		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-12">
-			<img alt="Bootstrap Image Preview" src="http://lorempixel.com/140/140/">
+			<img class="center" alt="Bootstrap Image Preview" src="https://storage.googleapis.com/ripfire-media/Logos/logo_fullcolor_150w.png">
 		</div>
 	</div>
 	<div class="row">
@@ -34,7 +34,7 @@
 					 
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
 						 <span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
-					</button> <a class="navbar-brand" href="#">Brand</a>
+					</button> <a class="navbar-brand" href="#">RipFire Media</a>
 				</div>
 				
 				<div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
